[package]
name = "stuck"
version = "0.4.0"
edition = "2021"
authors = ["Kezhu Wang <kezhuw@gmail.com>"]
description = "Multi-threading scheduled task facility building on cooperative stackful coroutine"
homepage = "https://github.com/kezhuw/stuck"
repository = "https://github.com/kezhuw/stuck"
documentation = "https://docs.rs/stuck"
license = "MIT"
keywords = ["concurrent", "coroutine", "task", "thread"]
categories = ["Concurrency"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.109"
lazy_static = "1.4.0"
errno = "0.2.8"
static_assertions = "1.1.0"
ignore-result = "0.2.0"
slab = "0.4.6"
mio = { version= "0.8.2", features= ["net", "os-poll", "os-ext"] }
stuck-macros = { version ="0.3.1", path = "macros" }
num_enum = "0.5.6"
hashbrown = "0.12.0"
more-asserts = "0.2.2"
derive-where = "1.2.7"
strum = { version = "0.26", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.6.3"

[dev-dependencies]
fastrand = "2.0.2"
googletest = "0.11.0"
pretty_assertions = "1.2.0"
scopeguard = "1.2.0"
tempfile = "3.10.1"
test-case = "3.3.1"

[patch.crates-io]
test-case = { git = "https://github.com/kezhuw/test-case.git", branch = "test-proc-macros-cooperation" }

[workspace]
members = ["macros"]
