[package]
name = "stuck-macros"
version = "0.1.3"
edition = "2021"
authors = ["Kezhu Wang <kezhuw@gmail.com>"]
description = "Macros to bootstrap stuck"
homepage = "https://github.com/kezhuw/stuck-macros"
repository = "https://github.com/kezhuw/stuck-macros"
documentation = "https://docs.rs/stuck-macros"
license = "MIT"
categories = ["Concurrency"]

[lib]
proc-macro = true

[dependencies]
syn = {version ="1.0", features=["full"]}
quote = "1.0"
proc-macro2 = "1.0.37"
